styles.css
/* ... */
.footer-rights {
  height: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #000000;
  font-family: "DM Sans", sans-serif;
  text-transform: capitalize;
  color: var(--footer-light);
}

.footer-rights-span {
  color: var(--bg-color);
}

/* --------- MODAL --------- */

.modal {
  display: none;
  position: fixed;
  z-index: 1000;
  inset: 0;
  background: rgba(0,0,0,0.6);
  justify-content: center;
  align-items: center;
}

.modal-content {
  position: relative;
  background: white;
  padding: 3rem;
  border-radius: 4px;
  min-width: 300px;
  max-width: 100vw;
  max-height: 95vh;
}

.modal.show {
  display: flex;
}

.close-icon {
  position: absolute;
  top: 20px;
  right: 20px;
  fill: var(--dark);
  cursor: pointer;
}

.close-button {
  position: absolute;
  top: 1rem;
  right: 1rem;
  cursor: pointer;
}

.modal-subscribe-title {
  margin-bottom: 14px;
  font-family: "Jost", sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.417;
  color: var(--dark);
}

.modal-subscribe-wrapper {
  margin-top: 8px;
  margin-bottom: 8px;
  display: flex;
  flex-direction: row;
  gap: 6px;
  justify-content: start;
  align-items: center;
}

.modal-subscribe-text {
  font-size: 18px;
}

.modal-subscribe-span {
  margin-bottom: 30px;
  font-size: 18px;
  font-style: italic;
  color: var(--accent);
}

.modal-subscribe-button {
  margin: 0 auto;
}

.modal-content.modal-blog {
  position: relative;
  padding: 4rem 6rem;
  width: 1700px;
  max-width: 85vw;
  max-height: 95vh;
  overflow-y: auto;
}

.modal-blog-article-date {
  position: absolute;
  padding: 8px 13px 8px 12px;
  top: 4rem;
  right: 6rem;
  width: 73px;
  height: 68px;
  color: var(--bg-color);
  text-align: center;
  background-image: url(./assets/img/date.png);
  background-size: contain;
  background-position: 0 0;
  background-repeat: no-repeat;
}

.blog-article-content {
  margin-top: 30px;
  margin-bottom: 50px;
  display: flex;
  flex-direction: row;
  gap: 70px;
  justify-content: space-between;
  align-items: start;
}

.blog-article-content-text {
  max-height: 56vh;
  padding-right: 10px;
  overflow-y: auto;
}

.modal-blog-article-pic {
  margin-top: 7px;
  width: auto;
  max-width: 50%;
  height: auto;
  object-fit: contain;
  display: block;
}

.modal-blog-article-paragraph {
  font-family: "Jost", sans-serif;
  font-size: 17px;
  font-weight: 600;
  margin-bottom: 20px;
}

.blog-article-text {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.blog-article-text > p {
  text-align: justify;
  text-indent: 2em;
}

.modal-blog-button {
  display: block;
  margin-left: auto; 
}

.modal-services {
  padding: 3rem 3rem;
  width: 1150px;
  height: 95vh;
  overflow-y: auto;
}

.modal-services-list {
  margin-bottom: 40px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 40px;
  justify-content: center;
  align-items: center;
  max-height: 76vh;
  overflow-y: auto;
}

.modal-services-item {
  position: relative;
  height: 374px;
  overflow: hidden;
  cursor: pointer;
}

.modal-services-img {
  object-fit: cover;
  display: block;
}

.modal-services-item::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to bottom, rgba(5, 0, 0, 0) 0%, rgba(14, 14, 14, 0.8) 100%);
  z-index: 1;
}

.modal-services-content {
  position: absolute;
  top: 120px;
  padding: 20px;
  z-index: 10;
}

.modal-full-service {
  padding: 4rem 6rem;
  width: 1150px;
  height: 95vh;
  overflow-y: auto;
}

.full-service-title {
  position: relative;
  margin-bottom: 50px;
  width: fit-content;
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
  color: var(--dark);
}

.full-service-title::after {
  content: "";
  position: absolute;
  display: block;
  width: 100%;
  height: 2px;
  border-radius: 2px;
  background-color: var(--dark);
  bottom: -14px;
  left: 0;
}

.full-service-content-wrapper {
  margin-bottom: 40px;
  display: flex;
  flex-direction: row;
  gap: 70px;
  align-items: start;
}

.full-service-content-container {
  height: 64vh;
  padding-right: 16px;
  overflow-y: auto;
}

.full-service-content-container::-webkit-scrollbar,
.modal-services-list::-webkit-scrollbar,
.blog-article-content-text::-webkit-scrollbar,
.modal-team-list::-webkit-scrollbar {
  width: 4px;
}

.full-service-content-container::-webkit-scrollbar-thumb,
.modal-services-list::-webkit-scrollbar-thumb,
.blog-article-content-text::-webkit-scrollbar-thumb,
.modal-team-list::-webkit-scrollbar-thumb {
  border-radius: 2px;
  background: var(--accent);
}

.full-service-content-container::-webkit-scrollbar-thumb:hover,
.modal-services-list::-webkit-scrollbar-thumb:hover,
.blog-article-content-text::-webkit-scrollbar-thumb:hover,
.modal-team-list::-webkit-scrollbar-thumb:hover {
  background: var(--accent-hover);
}

.full-service-img {
  margin-top: 7px;
  object-fit: contain;
}

.full-service-text {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.full-service-button-wrapper {
  display: flex;
  flex-direction: row;
  gap: 314px;
}

.modal-project {
  padding: 4rem 6rem;
  width: 1700px;
  max-height: 95vh;
  overflow-y: auto;
}

.modal-project-title {
  margin-bottom: 20px;
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
  color: var(--dark);
}

.modal-project-type {
  position: absolute;
  display: inline-block;
  width: fit-content;
  padding: 10px 20px;
  font-family: "Jost", sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.625;
  color: var(--bg-color);
  background-color: var(--accent);
}

.modal-project-wrapper {
  margin-bottom: 30px;
  display: flex;
  flex-direction: row;
  gap: 60px;
}

.modal-project-img {
  height: 320px;
  object-fit: cover;
}

.modal-project-features {
  list-style-type: disc;
  padding-left: 1.5em;
  font-weight: 500;
}
/* ... */

